[package]
name = "cartographer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tiff = "0.9.1"
osmio = "0.14.0"
utm = "0.1.6"
baby_shark = "0.3.3"
clap = { version = "4.5.26", features = ["derive"] }
reqwest = { version = "0.12.12", features = ["blocking"] }
urlencoding = "2.1.3"
